--- a/Hgtrg.Ecommerce/Hgtrg.Ecommerce.BusinessLayer/Hgtrg.Ecommerce.BusinessLayer.csproj
+++ b/Hgtrg.Ecommerce/Hgtrg.Ecommerce.BusinessLayer/Hgtrg.Ecommerce.BusinessLayer.csproj
@@ -1,10 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\Hgtrg.Ecommerce.DataLayer\Hgtrg.Ecommerce.DataLayer.csproj" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
+	</ItemGroup>
 
 </Project>
